--- a/t.html
+++ b/t.html
@@ -119,12 +119,12 @@
 		<script src="js/CSS3DRenderer.js"></script>
 
 		<div id="container"></div>
-		<div id="info">😁</div>
+		<div id="info"></div>
 		<div id="menu">
-			<button id="table">表格</button>
-			<button id="sphere">球球</button>
-			<button id="helix">螺旋</button>
-			<button id="grid">格子</button>
+			<button id="table">💻</button>
+			<button id="sphere">⚽️</button>
+			<button id="helix">🌜</button>
+			<button id="grid">🆚</button>
 		</div>
 
 		<div class="show_info animated" style="display:none;">
